--- a/app/src/main/res/drawable/textinputbg.xml
+++ b/app/src/main/res/drawable/textinputbg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@null" />
-    <corners android:radius="5dp" />
-    <stroke android:color="#cccccc" android:width="1pt" />
-    <padding android:top="5dp" android:bottom="5dp" android:right="5dp" android:left="5dp" />
+    <solid android:color="#FFFFFF" />
+    <corners android:radius="3dp" />
+    <stroke android:color="#e9e9e9" android:width="0.7pt" />
+    <padding android:top="10dp" android:bottom="10dp" android:right="10dp" android:left="10dp" />
 </shape>
