--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,7 +3,7 @@
     android:id="@+id/signUpActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/layoutBackground"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context="ir.geek.parvaneh.SignupActivity">
