--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
-    android:elevation="2dp"
+    android:elevation="4dp"
     android:layoutDirection="rtl">
 
     <TextView
+        android:id="@+id/toolbar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="بخش های برنامه"
+        android:text="@string/app_name"
         android:textSize="25dp"
         android:textStyle="bold" />
 
