--- a/app/src/main/res/layout/activity_document.xml
+++ b/app/src/main/res/layout/activity_document.xml
@@ -1,44 +1,291 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ir.geek.parvaneh.documentActivity">
 
-    <RelativeLayout
-        android:layout_width="395dp"
-        android:layout_height="643dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+    <android.support.design.widget.NavigationView
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:background="#f0f0f0"
+        android:layoutDirection="rtl"
+        app:headerLayout="@layout/header"
+        app:itemIconTint="@color/darkgray"
+        app:itemTextColor="@color/darkgray"
+        app:menu="@menu/drawermenu">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="43dp"
-            android:layout_marginTop="63dp"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/editText"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="44dp"
-            android:text="TextView" />
-
-        <EditText
-            android:id="@+id/editText"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:inputType="textPersonName" />
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            </RelativeLayout>
+
+        </ScrollView>
+    </android.support.design.widget.NavigationView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/layoutBackground">
+
+        <include
+            android:id="@+id/my_toolbar"
+            layout="@layout/toolbar" />
+
+
+        <RelativeLayout
+            android:id="@+id/relativePersonalInfo"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_below="@id/my_toolbar"
+           android:layout_marginTop="50dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/block_bg"
+            android:elevation="2dp"
+            >
+
+            <RelativeLayout
+                android:id="@+id/per_item_header"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:padding="15dp">
+             <TextView
+                android:id="@+id/changPersonalInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/txtpersonalinfo"
+                android:layout_alignParentStart="true"
+                android:text="TextView"
+                tools:text="@string/chang"
+                 android:layout_alignParentLeft="true"
+                 android:textSize="16sp"
+                 android:textStyle="bold"
+                 android:textColor="@color/blue_grey" />
+             <TextView
+                android:id="@+id/txtpersonalinfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                 android:layout_alignParentRight="true"
+                 android:textSize="16sp"
+                 android:textStyle="bold"
+                android:layout_weight="1"
+                android:text="TextView"
+                tools:text="اطلاعات شخصی"
+                android:layout_marginRight="20dp" />
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="55dp"
+                android:alpha="0.5"
+                android:id="@+id/divider"
+                android:layout_below="@id/sp_item_header"
+                android:background="@color/divider" />
+
+
+
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/txtlayoutLname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="100dp"
+                    android:background="@drawable/textinputbg"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/Fname"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:hint="@string/name"
+                        android:inputType="textPersonName"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textIsSelectable="false"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="200dp"
+                    android:background="@drawable/textinputbg"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/Lname"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:hint="@string/Lname"
+                        android:inputType="textPersonName"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textIsSelectable="false"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
+                </android.support.design.widget.TextInputLayout>
+
+
+        </RelativeLayout>
+
+        <!-- corporeal information -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:id="@+id/relativecorporeallInfo"
+            android:layout_below="@id/relativePersonalInfo"
+            android:layout_marginTop="50dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/block_bg"
+            android:elevation="2dp">
+
+
+            <RelativeLayout
+                android:id="@+id/cor_item_header"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:padding="15dp">
+                <TextView
+                    android:id="@+id/changcorporealInfo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/txtcorporealInfo"
+                    android:layout_alignParentStart="true"
+                    android:text="TextView"
+                    tools:text="@string/chang"
+                    android:layout_alignParentLeft="true"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/blue_grey" />
+                <TextView
+                    android:id="@+id/txtcorporealInfo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:text="TextView"
+                    tools:text="اطلاعات جسمی"
+                    android:layout_marginRight="20dp" />
+            </RelativeLayout>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="55dp"
+                android:alpha="0.5"
+                android:id="@+id/divider1"
+                android:layout_below="@id/sp_item_header"
+                android:background="@color/divider" />
+
+
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/txtlayoutsize"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="100dp"
+                android:background="@drawable/textinputbg"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/size"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/size"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textIsSelectable="false"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="200dp"
+                android:background="@drawable/textinputbg"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/weight"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:hint="@string/weight"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textIsSelectable="false"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="300dp"
+                android:background="@drawable/textinputbg"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/place"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:hint="@string/place"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textIsSelectable="false"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+            </android.support.design.widget.TextInputLayout>
+        </RelativeLayout>
     </RelativeLayout>
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.DrawerLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
