--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="link">#ff2a68</color>
     <color name="blue_grey">#6d819c</color>
     <color name="divider">#e9e9e9</color>
+    <color name="dark">#282c37</color>
+    <color name="warm_blue">#5856d6</color>
 </resources>
