--- a/app/src/main/res/layout/activity_new_sport_plan.xml
+++ b/app/src/main/res/layout/activity_new_sport_plan.xml
@@ -1,87 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer"
+    tools:context="ir.geek.parvaneh.NewSportPlanActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ir.geek.parvaneh.NewSportPlanActivity">
+    android:background="@color/layoutBackground"
+    android:layoutDirection="rtl">
 
-    <android.support.design.widget.NavigationView
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="end"
-        android:background="#f0f0f0"
-        android:layoutDirection="rtl"
-        app:headerLayout="@layout/header"
-        app:itemIconTint="@color/darkgray"
-        app:itemTextColor="@color/darkgray"
-        app:menu="@menu/drawermenu">
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-            </RelativeLayout>
-
-        </ScrollView>
-    </android.support.design.widget.NavigationView>
+    <include
+        android:id="@+id/my_toolbar"
+        layout="@layout/toolbar" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/layoutBackground">
-
-        <include
-            android:id="@+id/my_toolbar"
-            layout="@layout/toolbar" />
+        android:layout_height="200dp"
+        android:layout_below="@id/my_toolbar"
+        android:layout_margin="10dp"
+        android:background="@drawable/block_bg"
+        android:elevation="2dp"
+        android:padding="10dp">
 
         <RelativeLayout
+            android:id="@+id/time_input_block"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_below="@id/my_toolbar"
-            android:layout_margin="10dp"
-            android:background="@drawable/block_bg"
-            android:padding="10dp"
-            android:elevation="2dp">
+            android:layout_height="80dp"
+            android:background="@drawable/textinputbg">
 
-            <RelativeLayout
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:background="@drawable/textinputbg">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <EditText
+                    android:id="@+id/time"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:background="@null"
+                    android:editable="false"
+                    android:focusable="false"
+                    android:hint="@string/new_sp_time_hint"
+                    android:layoutDirection="rtl"
+                    android:singleLine="true"
+                    android:textIsSelectable="false" />
+            </android.support.design.widget.TextInputLayout>
 
-                    <EditText
-                        android:id="@+id/time"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@null"
-                        android:editable="false"
-                        android:focusable="false"
-                        android:hint="@string/new_sp_time_hint"
-                        android:layoutDirection="rtl"
-                        android:singleLine="true"
-                        android:textIsSelectable="false"
-                        android:textColorHint="@color/colorAccent"/>
-                </android.support.design.widget.TextInputLayout>
-
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:src="@drawable/ic_date"
-                    android:id="@+id/new_sp_datepicker_btn"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
+            <ImageView
+                android:id="@+id/new_sp_datepicker_btn"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_date" />
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tag_field_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/time_input_block"
+            android:layout_marginTop="10dp"
+            android:text="@string/tag_field_title"
+            android:textSize="20sp" />
+
+        <RadioGroup
+            android:id="@+id/color_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="44dp"
+            android:layout_below="@id/tag_field_title"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/blue_tag"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/circle_darkblue"
+                android:button="@null"
+                android:checked="true" />
+
+            <RadioButton
+                android:id="@+id/red_tag"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/circle_red"
+                android:button="@null" />
+
+            <RadioButton
+                android:id="@+id/magenta_tag"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/circle_magenta"
+                android:button="@null" />
+
+            <RadioButton
+                android:id="@+id/cyan_tag"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/circle_cyan"
+                android:button="@null" />
+
+            <RadioButton
+                android:id="@+id/purple_tag"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/circle_purple"
+                android:button="@null" />
+
+            <RadioButton
+                android:id="@+id/orange_tag"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/circle_orange"
+                android:button="@null" />
+
+            <RadioButton
+                android:id="@+id/green_tag"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@drawable/circle_green"
+                android:button="@null" />
+        </RadioGroup>
     </RelativeLayout>
-</android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
