--- a/persianmaterialdatetimepicker/src/main/res/values/colors.xml
+++ b/persianmaterialdatetimepicker/src/main/res/values/colors.xml
@@ -27,10 +27,10 @@
     <color name="mdtp_numbers_text_color">#ff212121</color>
 
     <color name="mdtp_transparent_black">#7f000000</color>
-    <color name="mdtp_accent_color">#009688</color>
+    <color name="mdtp_accent_color">#ff2a68</color>
     <color name="mdtp_accent_color_focused">#76ffffff</color>
     <color name="mdtp_neutral_pressed">#33999999</color>
-    <color name="mdtp_accent_color_dark">#00796b</color>
+    <color name="mdtp_accent_color_dark">#d82156</color>
     <color name="mdtp_date_picker_text_normal">#ff212121</color>
     <color name="mdtp_date_picker_text_highlighted">@color/mdtp_date_picker_text_normal</color>
     <color name="mdtp_date_picker_text_disabled">#ccc</color>
