--- a/app/src/main/res/drawable/removebtn.xml
+++ b/app/src/main/res/drawable/removebtn.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FFFFFF" />
     <corners android:radius="10dp" />
-    <stroke android:color="@color/grey" android:width="0.7pt" />
+    <stroke android:color="@color/link" android:width="0.7pt" />
     <padding android:top="10dp" android:bottom="10dp" android:right="10dp" android:left="10dp" />
 </shape>
