--- a/app/src/main/res/layout/activity_sport_test.xml
+++ b/app/src/main/res/layout/activity_sport_test.xml
@@ -1,8 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ir.geek.parvaneh.SportTestActivity">
+    android:id="@+id/drawer"
+    tools:context="ir.geek.parvaneh.SportTestsActivity"
+    >
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        layout="@layout/navigation_view"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/mdtp_background_color"
+        android:layoutDirection="rtl">
+
+    <include
+        android:id="@+id/my_toolbar"
+        layout="@layout/toolbar"/>
+
+        <TextView
+            android:id="@+id/txttest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="تست هوازی"
+            android:textSize="40dp"
+            android:textColor="#000000"
+            android:layout_below="@id/my_toolbar"
+            android:padding="5dp"
+            android:layout_marginRight= "30dp"/>
+
+        <RelativeLayout
+            android:id="@+id/relvideo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_below="@id/txttest">
+            
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_description"
+                android:layout_marginRight="15dp"/>
+
+            <TextView
+                android:id="@+id/txt1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="40dp"
+                android:text="آسان"
+                android:textSize="20dp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_timer"
+                android:layout_marginRight="100dp"/>
+
+            <TextView
+                android:id="@+id/txtvideotime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="130dp"
+                android:text="120 دقیقه"
+                android:textSize="20dp" />
+
+
+        </RelativeLayout>
+
+        <VideoView
+            android:id="@+id/video"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_below="@id/relvideo"
+            android:layout_marginTop="10dp"/>
+
+        <TextView
+            android:id="@+id/txtdescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/video"
+            android:text="تمرین های هوزای ایروبیک"
+            android:textSize="25dp" />
+    </RelativeLayout>
+
+</android.support.v4.widget.DrawerLayout>
